# Scratching-the-Surface-2

./: .env.example  .gitignore  README.md  pyproject.toml
app/: app.py
configs/: resnet50.yaml  resnet50_kolektor_ft.yaml  resnet50_kolektor_ft_v2.yaml  resnet50_kolektor_ft_v3.yaml  resnet50_kolektor_ft_v4.yaml  yolo11s.yaml
docs/: index.html  search.json  slides.html
figures/bakeoff/: domain_gap_picks.csv  labels_vs_vlm_breakeven.csv
notebooks/: 01_data_exploration.ipynb
research/: Cutting-Edge Defect Detection with AI.md  Metal Defect Detection Datasets Search.md
scripts/: analyse_resnet.py  bootstrap_labels.py  build_yolo_dataset.py  check_azure.py  check_gcp.py  check_openai.py  download_datasets.py  eval_hybrid.py  eval_vlm_flagship.py  eval_vlm_zeroshot.py  eval_yolo.py  finetune_resnet_kolektor.py  labelling_curve.py  learning_curve_resnet.py  make_cam_vlm_slide.py  make_comparison_figures.py  make_cost_tradeoff_figure.py  make_domain_gap_figure.py  make_flagship_bakeoff_figure.py  make_gradcam_grid.py  make_qual_grid.py  make_severstal_quiz_slides.py  make_speed_cost_figures.py  make_vlm_few_shot_grid.py  make_yolo_coco_demo.py  make_yolo_vs_resnet_qual.py  optimise_threshold.py  plot_finetune_history.py  post_training_2a.py  prompt_tune_vlm.py  run_post_finetune_pipeline.sh  run_v3_if_needed.sh  train_resnet.py  train_yolo.py  train_yolo_bootstrap.py  update_slides_results.py  wait_and_run_pipeline.sh
src/: config.py  cost.py  vlm_clients.py
src/prompts/: defect_analysis.py
website/: _brand.yml  _quarto.yml  index.qmd  slides.qmd
(+9 files in other folders)
