[project]
name = "scratching-the-surface"
version = "0.1.0"
description = "Classical CV vs Vision-Language Models for rolled-metal defect detection"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "ultralytics>=8.3",
    "transformers>=4.44",
    "pillow>=10.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "albumentations>=1.4",
    "opencv-python-headless>=4.10",
    "pycocotools>=2.0.8",
    "tqdm>=4.66",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "openai>=1.50",
    "anthropic>=0.34",
    "google-genai>=0.3",
    "azure-identity>=1.17",
    "kaggle>=1.6",
    "gradio>=4.44",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]
